--- a/login.html
+++ b/login.html
@@ -5,78 +5,109 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login or Register</title>
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" sizes="any">
-    <link rel="stylesheet" href="css/style.css"> <!-- Link to your existing CSS -->
+    <link rel="stylesheet" href="css/style.css">
     <style>
-        /* Basic styling for the forms */
         body {
             font-family: sans-serif;
+            background-image: url('assets/oleron_bridge.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f4f4f4;
-            margin: 0;
         }
+
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
+
         .container {
+            position: relative;
+            z-index: 1;
             background-color: #fff;
             padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            width: 400px;
             display: flex;
-            gap: 40px;
+            flex-direction: column;
+            align-items: center;
+            margin: auto;
         }
+
+        #message {
+            margin-top: 0;
+            text-align: center;
+            color: #000;
+            background-color: transparent;
+            padding: 10px;
+            border-radius: 8px;
+        }
+
         .form-section {
-            flex: 1;
-            min-width: 300px;
+            width: 100%;
+            margin-bottom: 20px;
         }
+
         h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
         }
+
         .form-group {
             margin-bottom: 15px;
         }
+
         label {
             display: block;
             margin-bottom: 5px;
             font-weight: bold;
             color: #555;
         }
+
         input[type="email"],
-        input[type="password"] {
-            width: 100%;
+        input[type="password"],
+        input[type="text"] {
+            width: 90%;
             padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box; /* Include padding and border in element's total width and height */
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-sizing: border-box;
+            margin-top: 5px;
+            outline: none;
         }
+
         button {
-            width: 100%;
+            width: 90%;
             padding: 10px;
             background-color: #007bff;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
             transition: background-color 0.3s ease;
         }
+
         button:hover {
             background-color: #0056b3;
         }
-        #message {
-            margin-top: 10px;
-            text-align: center;
-            color: green;
-            background-color: #f0f0f0;
-            padding: 10px;
-            border-radius: 5px;
-        }
+
         .error {
-            color: red;
+            color: #dc3545;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div id="message"></div>
@@ -115,6 +146,6 @@
         </div>
     </div>
 
-    <script src="js/auth.js"></script> <!-- Link to the auth logic -->
+    <script src="js/auth.js"></script>
 </body>
 </html>
