--- a/register.html
+++ b/register.html
@@ -264,7 +264,10 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">MSP Gestion</div>
+        <div class="logo">
+            <img src="/assets/favicon.ico" alt="MSP Gestion Logo" style="width: 25px; height: 25px; margin-bottom: 0; vertical-align: middle;">
+            <span style="margin-left: 0.5rem;">MSP Gestion</span>
+        </div>
         <div class="nav-links">
             <a href="#" class="nav-link" data-page="accueil">Accueil</a>
             <a href="#" class="nav-link" data-page="fonctionnalites">Fonctionnalités</a>
@@ -332,7 +335,10 @@
     <div class="dialog-overlay" id="contactDialog">
         <div class="dialog-content">
             <span class="dialog-close" id="closeContact">&times;</span>
-            <h3>Contact</h3>
+            <div class="login-header">
+                <img src="/assets/favicon.ico" alt="MSP Gestion Logo" style="width: 50px; height: 50px; margin-bottom: 1rem;">
+                <h3>Contact</h3>
+            </div>
             <form class="contact-form" id="contactForm">
                 <div class="form-group">
                     <label for="contactEmail">Votre email:</label>
