--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <div class="logo">
-                <h1>MSP Gestion</h1>
+            <div class="logo" style="background-color: #2c3e50;">
+                <img src="/assets/favicon.ico" alt="Logo MSP" style="height: 20px; margin-right: 10px;"><h1>MSP Gestion</h1>
             </div>
             <nav>
                 <ul>
@@ -40,6 +40,7 @@
                     </div>
                 </div>
             </header>
+            <br>
             <div class="dashboard">
                 <div class="welcome-section">
                     <h2>Bienvenue sur MSP Gestion</h2>
