--- a/index.html
+++ b/index.html
@@ -546,31 +546,196 @@
 
             // Attach export button listener
             const exportBtn = document.getElementById('exportDataBtn');
+            const exportDialog = document.getElementById('exportDialog');
+            const confirmExportBtn = document.getElementById('confirmExportBtn');
+            const cancelExportBtn = document.getElementById('cancelExportBtn');
+            const exportRevenusCheckbox = document.getElementById('exportRevenus');
+            const exportChargesCheckbox = document.getElementById('exportCharges');
+
+            // Show the modal when the export button is clicked
+            // Show the modal when the export button is clicked
             if (exportBtn) {
-                exportBtn.addEventListener('click', exportData);
+                exportBtn.addEventListener('click', () => {
+                    const exportDialog = document.getElementById('exportDialog'); // Re-get dialog inside listener
+                    if (exportDialog) {
+                        exportDialog.style.display = 'flex'; // Use flex to center the modal
+                    } else {
+                        console.error("Élément de dialogue 'exportDialog' non trouvé.");
+                    }
+                });
             } else {
                 console.error("Bouton d'exportation 'exportDataBtn' non trouvé.");
             }
+
+            // Hide the modal when the cancel button is clicked
+            if (cancelExportBtn) {
+                cancelExportBtn.addEventListener('click', () => {
+                    exportDialog.style.display = 'none';
+                });
+            } else {
+                console.error("Bouton d'annulation 'cancelExportBtn' non trouvé.");
+            }
+
+            // Handle export when the confirm button is clicked
+            if (confirmExportBtn) {
+                confirmExportBtn.addEventListener('click', () => {
+                    const includeRevenus = exportRevenusCheckbox.checked;
+                    const includeCharges = exportChargesCheckbox.checked;
+                    exportDialog.style.display = 'none'; // Hide the modal
+                    exportData(includeRevenus, includeCharges); // Call export function with options
+                });
+            } else {
+                console.error("Bouton de confirmation 'confirmExportBtn' non trouvé.");
+            }
+
+            // Hide the modal if the user clicks outside of it
+            window.addEventListener('click', (event) => {
+                if (event.target === exportDialog) {
+                    exportDialog.style.display = 'none';
+                }
+            });
+
 
             // Rafraîchissement périodique
             setInterval(updateStatsAndCharts, 30000); // Update stats and charts periodically
         });
 
-        // Fonction d'export (pour la maintenance)
-        function exportData() {
-            if (!globalData) return;
+        // Fonction d'export (modifiée pour accepter les options)
+        function exportData(includeRevenus, includeCharges) {
+            if (!globalData) {
+                console.warn("Aucune donnée globale disponible pour l'exportation.");
+                return;
+            }
 
-            const dataStr = JSON.stringify(globalData, null, 2);
+            const dataToExport = {};
+
+            if (includeRevenus && globalData.revenus) {
+                dataToExport.revenus = globalData.revenus;
+            }
+            if (includeCharges && globalData.charges) {
+                dataToExport.charges = globalData.charges;
+            }
+
+            // If no data is selected, maybe show a message or export an empty object
+            if (Object.keys(dataToExport).length === 0) {
+                 console.warn("Aucune donnée sélectionnée pour l'exportation.");
+                 alert("Veuillez sélectionner au moins un type de données à exporter."); // Added alert
+                 return; // Do not proceed with export if nothing is selected
+            }
+
+
+            const dataStr = JSON.stringify(dataToExport, null, 2);
             const dataBlob = new Blob([dataStr], { type: 'application/json' });
             const url = URL.createObjectURL(dataBlob);
             const link = document.createElement('a');
             link.href = url;
-            link.download = 'data.json';
+            link.download = 'export_data.json'; // Changed filename for clarity
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
             URL.revokeObjectURL(url);
         }
     </script>
+
+    <!-- Export Dialog Box HTML -->
+    <div id="exportDialog" class="modal">
+        <div class="modal-content">
+            <h2>Choisir les données à exporter</h2>
+            <div class="checkbox-group">
+                <label>
+                    <input type="checkbox" id="exportRevenus" checked> Revenus ACI
+                </label>
+                <label>
+                    <input type="checkbox" id="exportCharges" checked> Charges
+                </label>
+            </div>
+            <div class="modal-actions">
+                <button id="confirmExportBtn">Exporter</button>
+                <button id="cancelExportBtn">Annuler</button>
+            </div>
+        </div>
+    </div>
+
+    <style>
+        /* Basic Modal Styles */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1000; /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto; /* Center the modal */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Could be responsive */
+            max-width: 400px; /* Max width */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            text-align: center;
+        }
+
+        .modal-content h2 {
+            margin-top: 0;
+            color: #333;
+        }
+
+        .checkbox-group {
+            margin: 20px 0;
+            text-align: left;
+        }
+
+        .checkbox-group label {
+            display: block;
+            margin-bottom: 10px;
+            font-size: 1em;
+            color: #555;
+        }
+
+        .checkbox-group input[type="checkbox"] {
+            margin-right: 10px;
+        }
+
+        .modal-actions {
+            display: flex;
+            justify-content: space-around;
+            gap: 10px; /* Space between buttons */
+        }
+
+        .modal-actions button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+        }
+
+        #confirmExportBtn {
+            background-color: #4CAF50; /* Green */
+            color: white;
+        }
+
+        #confirmExportBtn:hover {
+            background-color: #45a049;
+        }
+
+        #cancelExportBtn {
+            background-color: #f44336; /* Red */
+            color: white;
+        }
+
+        #cancelExportBtn:hover {
+            background-color: #da190b;
+        }
+    </style>
 </body>
 </html>
