--- a/register.html
+++ b/register.html
@@ -303,6 +303,10 @@
                     <label for="registerPassword">Mot de passe:</label>
                     <input type="password" id="registerPassword" name="registerPassword" required>
                 </div>
+                <div class="form-group">
+                    <label for="registerAvatar">Avatar (facultatif):</label>
+                    <input type="file" id="registerAvatar" name="avatar" accept="image/*">
+                </div>
                 
                 <button type="submit" class="btn-login">S'inscrire</button>
             </form>
