--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
         </div>
     </div>
 
+    
+    <div class="dialog-overlay" id="fonctionnalitesDialog">
+        <div class="dialog-content">
+            <div class="dialog-banner">
+                <div class="dialog-banner-content">
+                    <h3>Fonctionnalités</h3>
+                </div>
+                <span class="dialog-close" id="closeFonctionnalites">&times;</span>
+            </div>
+            <div class="dialog-body">
+                <p>Contenu des fonctionnalités (à partir de README.md)</p>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
     <!-- Authentication -->
