--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             </div>
             <nav>
                 <ul>
-                    <li class="active"><a href="index.html"><i class="fas fa-home"></i> Accueil</a></li>
-                    <li><a href="templates/revenus.html"><i class="fas fa-money-bill-wave"></i> Revenus ACI</a></li>
-                    <li><a href="templates/associes.html"><i class="fas fa-user-md"></i> Associés</a></li>
-                    <li><a href="templates/charges.html"><i class="fas fa-file-invoice-dollar"></i> Charges</a></li>
-                    <li><a href="templates/rcpmeeting.html"><i class="fas fa-users"></i> Réunions RCP</a></li>
-                    <li><a href="templates/projets.html"><i class="fas fa-tasks"></i> Projets & Missions</a></li>
-                    <li><a href="templates/repartition.html"><i class="fas fa-chart-pie"></i> Répartition</a></li>
-                    <li><a href="templates/parametres.html"><i class="fas fa-cog"></i> Paramètres</a></li>
-                    <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> Déconnexion</a></li>
+                    <li class="active"><a href="index.html"><i class="fas fa-home"></i> <span>Accueil</span></a></li>
+                    <li><a href="templates/revenus.html"><i class="fas fa-money-bill-wave"></i> <span>Revenus ACI</span></a></li>
+                    <li><a href="templates/associes.html"><i class="fas fa-user-md"></i> <span>Associés</span></a></li>
+                    <li><a href="templates/charges.html"><i class="fas fa-file-invoice-dollar"></i> <span>Charges</span></a></li>
+                    <li><a href="templates/rcpmeeting.html"><i class="fas fa-users"></i> <span>Réunions RCP</span></a></li>
+                    <li><a href="templates/projets.html"><i class="fas fa-tasks"></i> <span>Projets & Missions</span></a></li>
+                    <li><a href="templates/repartition.html"><i class="fas fa-chart-pie"></i> <span>Répartition</span></a></li>
+                    <li><a href="templates/parametres.html"><i class="fas fa-cog"></i> <span>Paramètres</span></a></li>
+                    <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> <span></span>Déconnexion</span></a></li>
                     <!-- Logout button -->
                 </ul>
             </nav>
@@ -36,6 +36,8 @@
         <div class="main-content">
             <header>
                 <div class="header-content">
+                    <!-- Add the toggle button here -->
+                    <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
                     <h1>Tableau de bord</h1>
                     <div class="user-info">
                         <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar"
