--- a/login.html
+++ b/login.html
@@ -211,8 +211,6 @@
             justify-content: center;
             align-items: center;
             z-index: 1000;
-            overflow-y: auto;
-            /* Allow scrolling if content overflows */
         }
 
         .dialog-content {
@@ -308,8 +306,9 @@
             border-top-right-radius: 8px;
             display: flex;
             align-items: center;
-            position: relative;
-            /* For close button positioning */
+            position: sticky; /* Make banner sticky */
+            top: 0; /* Stick to the top */
+            z-index: 1; /* Ensure it's above scrolling content */
         }
 
         .dialog-banner-content {
@@ -346,6 +345,8 @@
             /* Ensure background is white */
             border-bottom-left-radius: 8px;
             border-bottom-right-radius: 8px;
+            overflow-y: auto; /* Allow only body content to scroll */
+            max-height: calc(90vh - 100px); /* Set max height for scrolling */
         }
 
         /* Adjust dialog-content padding */
