--- a/register.html
+++ b/register.html
@@ -42,6 +42,12 @@
             cursor: pointer; /* Add cursor pointer for better UX */
         }
 
+        .nav-links a:hover,
+        .nav-links a.highlight-menu-item {
+            background-color: rgba(255, 255, 255, 0.15); /* Slightly more prominent highlight */
+            text-decoration: none; /* Remove underline on hover/highlight */
+        }
+
         /* Hamburger styles */
         .hamburger {
             display: none; /* Hidden by default */
