--- a/index.html
+++ b/index.html
@@ -139,19 +139,6 @@
     </div>
 
 
-    <div class="dialog-overlay" id="fonctionnalitesDialog">
-        <div class="dialog-content">
-            <div class="dialog-banner">
-                <div class="dialog-banner-content">
-                    <h3>Fonctionnalités</h3>
-                </div>
-                <span class="dialog-close" id="closeFonctionnalites">&times;</span>
-            </div>
-            <div class="dialog-body">
-                <p>Contenu des fonctionnalités (à partir de README.md)</p>
-            </div>
-        </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
@@ -590,6 +577,10 @@
             // Rafraîchissement périodique
             setInterval(updateStatsAndCharts, 30000); // Update stats and charts periodically
         });
+
+        // Explicitly hide dialogs on load to prevent unexpected display
+        document.getElementById('fonctionnalitesDialog').style.display = 'none';
+
     </script>
 </body>
 
