--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="header-content">
                     <!-- Add the toggle button here -->
                     <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
-                    <h1>Tableau de bord</h1>
+                    <h1>Dashboard</h1>
                     <div class="user-info">
                         <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar"
                             style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px; vertical-align: middle;">
