--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
             <nav>
                 <ul>
                     <li class="active"><a href="index.html"><i class="fas fa-home"></i> <span>Accueil</span></a></li>
-                    <li><a href="templates/revenus.html"><i class="fas fa-money-bill-wave"></i> <span>Revenus ACI</span></a></li>
+                    <li><a href="templates/revenus.html"><i class="fas fa-money-bill-wave"></i> <span>Revenus
+                                ACI</span></a></li>
                     <li><a href="templates/associes.html"><i class="fas fa-user-md"></i> <span>Associés</span></a></li>
-                    <li><a href="templates/charges.html"><i class="fas fa-file-invoice-dollar"></i> <span>Charges</span></a></li>
-                    <li><a href="templates/rcpmeeting.html"><i class="fas fa-users"></i> <span>Réunions RCP</span></a></li>
-                    <li><a href="templates/projets.html"><i class="fas fa-tasks"></i> <span>Projets & Missions</span></a></li>
-                    <li><a href="templates/repartition.html"><i class="fas fa-chart-pie"></i> <span>Répartition</span></a></li>
+                    <li><a href="templates/charges.html"><i class="fas fa-file-invoice-dollar"></i>
+                            <span>Charges</span></a></li>
+                    <li><a href="templates/rcpmeeting.html"><i class="fas fa-users"></i> <span>Réunions RCP</span></a>
+                    </li>
+                    <li><a href="templates/projets.html"><i class="fas fa-tasks"></i> <span>Projets &
+                                Missions</span></a></li>
+                    <li><a href="templates/repartition.html"><i class="fas fa-chart-pie"></i>
+                            <span>Répartition</span></a></li>
                     <li><a href="templates/parametres.html"><i class="fas fa-cog"></i> <span>Paramètres</span></a></li>
-                    <li><a href="#" id="logoutButton"><i class="fas fa-sign-out-alt"></i> <span></span>Déconnexion</span></a></li>
+                    <li><a href="../login.html" id="logoutButton"><i class="fas fa-sign-out-alt"></i>
+                        <span>Déconnexion</span></a></li>
                     <!-- Logout button -->
                 </ul>
             </nav>
@@ -41,17 +47,17 @@
                     <h1>Dashboard</h1>
                     <div class="user-info">
                         <img id="userAvatar" src="/images/default_avatar.png" alt="User Avatar"
-                            style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px; vertical-align: middle;">
+                            >
                         <span id="usernameDisplay">Utilisateur</span>
                     </div>
                 </div>
             </header>
             <br>
             <div class="dashboard">
-                <div class="welcome-section">
+                <!-- <div class="welcome-section">
                     <h2>Bienvenue sur MSP Gestion</h2>
                     <p>Application de gestion pour votre Maison de Santé Pluriprofessionnelle</p>
-                </div>
+                </div> -->
                 <div class="quick-stats">
                     <div class="stat-card">
                         <div class="stat-icon">
@@ -102,29 +108,24 @@
                             <canvas class="chart" id="repartition-chart"></canvas>
                         </div>
                     </div>
-                    <div class="recent-activities parametres-section">
+                    <div class="recent-activities">
                         <h3>Paramètres de répartition actuels</h3>
                         <div class="parametres-content">
                             <div class="parametres-grid">
                                 <div class="parametre-card">
-                                    <div class="parametre-title">Part fixe</div>
-                                    <div class="parametre-subtitle">Du revenu net</div>
-                                    <div class="parametre-value" id="param-part-fixe">50%</div>
+                                    <div class="parametre-title">Part fixe du revenu net: <span class="parametre-value"
+                                            id="param-part-fixe">50%</span></div>
                                 </div>
                                 <div class="parametre-card">
-                                    <div class="parametre-title">Facteur cogérant</div>
-                                    <div class="parametre-subtitle">Associés gérants</div>
-                                    <div class="parametre-value" id="param-facteur-cogerant">×1.7</div>
+                                    <div class="parametre-title">Facteur cogérant associés gérants: <span
+                                            class="parametre-value" id="param-facteur-cogerant">×1.7</span></div>
                                 </div>
                                 <div class="parametre-card">
-                                    <div class="parametre-title">Part RCP</div>
-                                    <div class="parametre-subtitle">Du revenu net</div>
-                                    <div class="parametre-value" id="param-part-rcp">25%</div>
+                                    <div class="parametre-title">Part RCP du revenu net: <span class="parametre-value"
+                                            id="param-part-rcp">25%</span></div>
                                 </div>
                                 <div class="parametre-card">
-                                    <div class="parametre-title">Part Projets</div>
-                                    <div class="parametre-subtitle">Du revenu net</div>
-                                    <div class="parametre-value" id="param-part-projets">25%</div>
+                                    <div class="parametre-title">Part Projets du revenu net:                                     <span class="parametre-value" id="param-part-projets">25%</span></div>
                                 </div>
                             </div>
                             <div class="parametres-chart-container">
