--- a/login.html
+++ b/login.html
@@ -46,16 +46,20 @@
 
         .nav-links a:hover,
         .nav-links a.highlight-menu-item {
-            background-color: rgba(255, 255, 255, 0.15); /* Slightly more prominent highlight */
-            text-decoration: none; /* Remove underline on hover/highlight */
+            background-color: rgba(255, 255, 255, 0.15);
+            /* Slightly more prominent highlight */
+            text-decoration: none;
+            /* Remove underline on hover/highlight */
         }
 
         /* Hamburger styles */
         .hamburger {
-            display: none; /* Hidden by default */
+            display: none;
+            /* Hidden by default */
             cursor: pointer;
             padding: 10px;
-            z-index: 1001; /* Ensure it's above other content */
+            z-index: 1001;
+            /* Ensure it's above other content */
         }
 
         .hamburger .bar {
@@ -76,18 +80,21 @@
 
             .nav-links {
                 width: 100%;
-                display: none; /* Hidden by default on small screens */
+                display: none;
+                /* Hidden by default on small screens */
                 flex-direction: column;
                 background-color: #2c3e50;
                 position: absolute;
-                top: 60px; /* Adjust based on navbar height */
+                top: 60px;
+                /* Adjust based on navbar height */
                 left: 0;
                 padding: 1rem 0;
                 text-align: center;
             }
 
             .nav-links.active {
-                display: flex; /* Show when active */
+                display: flex;
+                /* Show when active */
             }
 
             .nav-links a {
@@ -95,7 +102,8 @@
             }
 
             .hamburger {
-                display: block; /* Show hamburger on small screens */
+                display: block;
+                /* Show hamburger on small screens */
             }
         }
 
@@ -115,6 +123,16 @@
             font-size: 1.2rem;
             max-width: 600px;
             margin: 0 auto 1rem;
+        }
+
+        @media (max-width: 768px) {
+            .hero p {
+                font-size: 1rem;
+            }
+
+            .hero h1 {
+                font-size: 2rem;
+            }
         }
 
         .main-content {
@@ -312,9 +330,12 @@
             border-top-right-radius: 8px;
             display: flex;
             align-items: center;
-            position: sticky; /* Make banner sticky */
-            top: 0; /* Stick to the top */
-            z-index: 1; /* Ensure it's above scrolling content */
+            position: sticky;
+            /* Make banner sticky */
+            top: 0;
+            /* Stick to the top */
+            z-index: 1;
+            /* Ensure it's above scrolling content */
         }
 
         .dialog-banner-content {
@@ -351,8 +372,10 @@
             /* Ensure background is white */
             border-bottom-left-radius: 8px;
             border-bottom-right-radius: 8px;
-            overflow-y: auto; /* Allow only body content to scroll */
-            max-height: calc(90vh - 100px); /* Set max height for scrolling */
+            overflow-y: auto;
+            /* Allow only body content to scroll */
+            max-height: calc(90vh - 100px);
+            /* Set max height for scrolling */
         }
 
         /* Adjust dialog-content padding */
