--- a/register.html
+++ b/register.html
@@ -429,6 +429,17 @@
             padding: 0;
             /* Remove padding from dialog-content */
         }
+
+
+        @media (max-width: 768px) {
+            .hero p {
+                font-size: 1rem;
+            }
+
+            .hero h1 {
+                font-size: 2rem;
+            }
+        }
     </style>
 </head>
 
