--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
         });
 
         // Explicitly hide dialogs on load to prevent unexpected display
-        document.getElementById('fonctionnalitesDialog').style.display = 'none';
+        //document.getElementById('fonctionnalitesDialog').style.display = 'none';
 
     </script>
 </body>
