--- a/register.html
+++ b/register.html
@@ -59,7 +59,8 @@
                 </div>
                 <div class="form-group">
                     <label for="registerAvatar">Avatar (facultatif):</label>
-                    <input type="file" id="registerAvatar" name="avatar" accept="image/*">
+                    <input id="registerAvatar" type="file" style="font-size: 0.8rem;" name="avatar"
+                        accept="image/*">
                 </div>
 
                 <button type="submit" class="btn-login">S'inscrire</button>
