--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="dashboard-content">
                     <div class="chart-container">
                         <h3>Répartition des revenus</h3>
-                        <div style="position: relative; height:300px; width:100%">
+                        <div>
                             <canvas class="chart" id="repartition-chart"></canvas>
                         </div>
                     </div>
